<resources>
    <string name="app_name">AudioJam</string>

    <!-- Strings related to login -->
    <string name="connection_button">Connexion</string>
    <string name="inscription_button">Inscription</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de Passe </string>
    <string name="prompt_name">Nom</string>
    <string name="prompt_password_verif">Verification Mot de Passe</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="action_sign_up">S\'enregistrer</string>
    <string name="action_sign_in_facebook">Se connecter avec Facebook</string>
    <string name="action_sign_in_google">Se connecter avec Google</string>
    <string name="action_sign_in_short">Connecter</string>
    <string name="error_invalid_email">Cette adresse mail n\'est pas valable</string>
    <string name="error_invalid_password">Le mot de passe est trop court</string>
    <string name="error_incorrect_password">Mot de passe incorrect</string>
    <string name="error_field_required">Ce champ est requis</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>


    <string name="facebook_app_id">1931899523705488</string>
    <string name="profile_name">MY NAME HERE</string>
    <string name="new_add_playlist">Join/New playlist</string>
    <string name="playing">Now Playing :</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_world">Hello world!</string>
    <string name="settings">Settings</string>
    <string name="myprofile">My profile</string>
    <string name="myplaylists">My Playlists</string>
    <string name="joinaddplaylist"> Join / Create Playlist</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="logout">Log out</string>
    <string name="search">Search for a title:</string>


    <!-- AppOptions Strings -->

    <string name="email">Email</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>


    <string name="helptitle">For information:</string>
    <string name="helpbody">Help info here</string>
    <string name="helplink">link to website</string>


    <string name="join">Join a playlist:</string>
    <string name="newpl">Create a playlist:</string>
    <string name="token">Enter a token:</string>
    <string name="QRCode">Scan a QR Code:</string>
    <string name="inputname">Enter a name:</string>
    <string name="cover">Choose a cover:</string>
    <string name="visibility">Choose a visibility</string>
    <string name="validate">Confirm</string>

    <string name="add_admin">Add an admin:</string>
    <string name="add_user">Add a friend:</string>
    <string name="change_visibility">Change the visibility:</string>
    <string name="sharing_link">Your sharing link:</string>
    <string name="sharing_QRC">Your sharing QRCode:</string>

    <string name="aboutapptitle">About the app:</string>
    <string name="aboutapp">This app was originally developped for a student project. The aim is to create a "full" java app for Android.
    \n\nWe are in no way content owners and do not claim rights or monitization from the use of this app.
    \n\nThis app is still in development.</string>
    <string name="aboutappauthor">About the creators:</string>
    <string name="aboutauthor">The creators are 4th year students at HEI engineering school.
    \n\nJules Moreau
\n\nJoseph Sallembien</string>

</resources>