<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/backgroundYellow"
    tools:context="com.example.jules.audiojam.LoginActivity">

    <!-- Login progress -->

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:weightSum="1"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="100dp"
                android:paddingBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp">
                    <Button
                        android:text="@string/connection_button"
                        android:textColor="@color/textemphasis1"
                        android:layout_width="190dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/menuWhite"
                        android:id="@+id/button_connection_screen"
                        style="@style/Widget.AppCompat.Button.selector"
                        android:textSize="18sp" />

                    <Button
                        android:text="@string/inscription_button"
                        android:textColor="@color/textemphasis2"
                        android:layout_width="190dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/menuWhite"
                        android:id="@+id/button_inscription_screen"
                        style="@style/Widget.AppCompat.Button.selector"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@drawable/infofill"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <AutoCompleteTextView
                            android:id="@+id/email"
                            android:paddingLeft="45dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="40dp">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_password"
                            android:imeActionId="@+id/login"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">

                <CheckBox
                    android:text="Se souvenir de moi"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/checkBox"
                    android:checked="false" />

                <Button
                    android:id="@+id/email_sign_in_button"
                    android:text="@string/action_sign_in"
                    android:layout_weight="1"
                    android:background="@drawable/shape"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:layout_width="140dp"
                    android:layout_height="30dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_weight="6.79"
                    android:text="@string/action_sign_in_facebook"
                    android:backgroundTint="?android:attr/colorPrimaryDark"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/button3"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_sign_in_google"
                    android:textStyle="bold"
                    android:layout_weight="6.79"
                    android:backgroundTint="@android:color/holo_red_dark"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

</LinearLayout>