<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordlayout1">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/toolbar2"
            android:layout_weight="1" >
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:srcCompat="@mipmap/close"
                    android:id="@+id/imageButton"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary" />

                <TextView
                    android:text="@string/about"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/title_about"
                    android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                    android:layout_weight="5"
                    android:textColor="@color/white"
                    android:textAllCaps="true"
                    android:background="@color/colorPrimary"
                    android:gravity="center_vertical"
                    android:paddingLeft="120dp" />

            </LinearLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/playlist_mainview"
            android:orientation="vertical">

            <TextView
                android:text="@string/aboutapptitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pmainview_txt1"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <TextView
                android:text="@string/aboutapp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:padding="10dp" />

            <TextView
                android:text="@string/aboutappauthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <TextView
                android:text="@string/aboutauthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:padding="10dp" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="20dp"
        app:srcCompat="@mipmap/plussign"
        app:borderWidth="0dp"
        app:backgroundTint="@color/colorPrimary" />

</android.support.design.widget.CoordinatorLayout>
